--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,9 @@
 page-home {
+  background: linear-gradient(rgb(0, 62, 105), rgb(244, 115, 36));
+  #centro {
+    position: relative;
+    top: 40%;
+
+}
 
 }
